2009-10-14 Magnus Hagdorn
 * libglimmer/glimmer_paramets.F90: rename module
 * scripts/generate_ncvars.py, lots of .F90: rename module

2009-10-13 Magnus Hagdorn
 * tests/exact-isothermal/scripts/plot_diff.py: reimplemented using matplotlib
   and numpy
 * tests/exact-isothermal/scripts/plot_errors.py: ditto
 * tests/exact-isothermal/scripts/plot_time.py: ditto
 * tests/exact-isothermal/scripts/plot_vol.py: ditto
 * tests/exact-isothermal/scripts/process_verif.py: ditto
 * tests/exact-isothermal/tests/Makefile.am: call new visualisation programs

2009-10-07 Magnus Hagdorn
 * libglint/Makefile.am: forgot to add module directory
 * m4macros/hdf5.m4: improved hdf5 detector, it's similar to the netcdf one
 * m4macros/netcdf.m4: change how HDF5 libraries are handled
 * scripts/glide_launch.py: fix location of SGE submission script
 * tests/exact-isothermal/scripts/run_verif.py: ditto
 * tests/exact-isothermal/tests/Makefile.am: add SGE options

2009-09-30 Magnus Hagdorn
 * configure.in: export fortran compiler flag which sets the module search
   path
 * example-drivers/EISMINT-3/src/Makefile.am: use new variable containing
   fortran compiler flag for module search path and use correct variable
   for fortran netcdf module search path
 * example-drivers/eis/src/Makefile.am: ditto
 * example-drivers/glint/src/Makefile.am: ditto
 * libglide/Makefile.am: ditto
 * libglimmer/Makefile.am: ditto
 * libglimmer-solve/Makefile.am: ditto
 * libglint/Makefile.am: ditto
 * tests/EISMINT/src/Makefile.am: ditto
 * tests/exact-isothermal/src/Makefile.am: ditto

2009-09-30 Magnus Hagdorn
 * m4macros/netcdf.m4: bah, introduced bug when no particular directory is
   specified - fixed now 

2009-09-30 Magnus Hagdorn
 * m4macros/netcdf.m4: fix bug when location of netCDF lib is specified
   manually

2009-09-29 Magnus Hagdorn
 * libglimmer/glimmer_commandline.F90: add doxygen strings
 * libglimmer/glimmer_config.F90: ditto
 * libglimmer/glimmer_ts.F90: minor fix

2009-09-28 Ian Rutt