@@ -18,36 +18,43 @@ datamod:  glide_types
 dimensions:    x0
 units:         meter
 long_name:     Cartisian x-coordinate, velocity grid
-standard_name: projection_x_coordinate
+axis:          X
+data:          data%general%x0
 dimlen:        model%general%ewn-1
 
 [y0]
 dimensions:    y0
 units:         meter
 long_name:     Cartisian y-coordinate, velocity grid
-standard_name: projection_y_coordinate
+axis:          Y
+data:          data%general%y0
 dimlen:        model%general%nsn-1
 
 [x1]
 dimensions:    x1
 units:         meter
 long_name:     Cartisian x-coordinate
-standard_name: projection_x_coordinate
+axis:          X
+data:          data%general%x1
 dimlen:        model%general%ewn
+load:1
 
 [y1]
 dimensions:    y1
 units:         meter
 long_name:     Cartisian y-coordinate
-standard_name: projection_y_coordinate
+axis:          Y
+data:          data%general%y1
 dimlen:        model%general%nsn
+load:1
 
 [level]
 dimensions:    level
 units:         1
 long_name:     sigma layers
 standard_name: land_ice_sigma_coordinate
-formula_terms: sigma: level topo: topg thick: thk
+#formula_terms: sigma: level topo: topg thick: thk
+positive:      down
 dimlen:        model%general%upn
 
 [lithoz]
@@ -59,7 +66,7 @@ dimlen:        model%lithot%nlayer
 [lat]
 dimensions:    time, y1, x1
 units:         degreeN
-long_name:     Latitude
+long_name:     latitude
 data:          data%climate%lati
 load:          1
 hot:           1
@@ -68,7 +75,7 @@ standard_name: latitude
 [lon]
 dimensions:    time, y1, x1
 units:         degreeE
-long_name:     Longitude
+long_name:     longitude
 data:          data%climate%loni
 load:          1
 standard_name: longitude
